--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ "master" ]
   pull_request:
-    branches: [ "master", "fix/dotnet9" ]
+    branches: [ fix/dotnet9" ]
 
 jobs:
   build:
