--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,10 @@ jobs:
         dotnet-version: 9.0.x
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: google-photos-upload/google-photos-upload
     - name: Build
       run: dotnet build --no-restore
+      working-directory: google-photos-upload/google-photos-upload
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: google-photos-upload/google-photos-upload
