--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,17 +31,17 @@ jobs:
     
     # Publish self-contained for Windows
     - name: Publish Windows (Self-Contained)
-      run: dotnet publish --configuration Release --runtime win-x64 --self-contained true --output ./publish/win-x64
+      run: dotnet publish --configuration Release --runtime win-x64 --self-contained true --output ./publish/win-x64 /p:PublishSingleFile=true
       working-directory: google-photos-upload/google-photos-upload
     
     # Publish self-contained for macOS
     - name: Publish macOS (Self-Contained)
-      run: dotnet publish --configuration Release --runtime osx-x64 --self-contained true --output ./publish/osx-x64
+      run: dotnet publish --configuration Release --runtime osx-x64 --self-contained true --output ./publish/osx-x64 /p:PublishSingleFile=true
       working-directory: google-photos-upload/google-photos-upload
     
     # Publish self-contained for Linux
     - name: Publish Linux (Self-Contained)
-      run: dotnet publish --configuration Release --runtime linux-x64 --self-contained true --output ./publish/linux-x64
+      run: dotnet publish --configuration Release --runtime linux-x64 --self-contained true --output ./publish/linux-x64 /p:PublishSingleFile=true
       working-directory: google-photos-upload/google-photos-upload
     
     - name: Upload Windows executable
